--- a/src/main/resources/assets/joniislevers/lang/en_us.json
+++ b/src/main/resources/assets/joniislevers/lang/en_us.json
@@ -1,4 +1,7 @@
 {
   "item.joniislevers.bismuth": "Bismuth",
-  "item.joniislevers.raw_bismuth": "Raw Bismuth"
+  "item.joniislevers.raw_bismuth": "Raw Bismuth",
+
+  "block.joniislevers.bismuth_block": "Block of Bismuth",
+  "block.joniislevers.bismuth_ore": "Bismuth Ore"
 }
