--- a/src/main/resources/assets/joniislevers/lang/en_us.json
+++ b/src/main/resources/assets/joniislevers/lang/en_us.json
@@ -3,5 +3,6 @@
   "item.joniislevers.raw_bismuth": "Raw Bismuth",
 
   "block.joniislevers.bismuth_block": "Block of Bismuth",
-  "block.joniislevers.bismuth_ore": "Bismuth Ore"
+  "block.joniislevers.bismuth_ore": "Bismuth Ore",
+  "block.joniislevers.bismuth_deepslate_ore": "Deepslate Bismuth Ore"
 }
