--- a/src/main/resources/assets/joniislevers/lang/en_us.json
+++ b/src/main/resources/assets/joniislevers/lang/en_us.json
@@ -4,5 +4,7 @@
 
   "block.joniislevers.bismuth_block": "Block of Bismuth",
   "block.joniislevers.bismuth_ore": "Bismuth Ore",
-  "block.joniislevers.bismuth_deepslate_ore": "Deepslate Bismuth Ore"
+  "block.joniislevers.bismuth_deepslate_ore": "Deepslate Bismuth Ore",
+
+  "block.joniislevers.bismuth_lever": "Bismuth Lever"
 }
